# svn-client

./: AGENTS.md  CLAUDE.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
scripts/e2e/: config-preset-flow.mjs  line-picker.mjs  repro-repo-click.mjs  tauri-mock.js  unavailable-wc.mjs
src/: App.vue  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: errors.rs  lib.rs  main.rs  models.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/process/: mod.rs
src-tauri/src/storage/: mod.rs
src-tauri/src/svn/: diff.rs  info.rs  list.rs  log.rs  merge.rs  mod.rs  package.rs  preset.rs  project.rs  runner.rs  status.rs  streaming.rs
src/api/: svn.ts
src/components/: AppConfirmDialog.vue  AppToasts.vue  CommitPanel.vue  DiffViewer.vue  EnvWarning.vue  RepositoryList.vue  TaskCenter.vue  TaskOutput.vue  UpdatePanel.vue  WorkingCopyChangesPopover.vue  WorkingCopyList.vue
src/components/ui-local/: ContextMenu.vue  EmptyState.vue  LoadingSpinner.vue
src/components/ui/badge/: index.ts
src/components/ui/button/: index.ts
src/composables/: monaco-setup.ts  monaco-theme.ts  use-app-toast.ts  use-confirm-dialog.ts  use-error-toast.ts  use-request-generation.ts
src/lib/: ui-state.ts  utils.ts
src/stores/: repositories.ts  status.ts  tasks.ts  workingCopies.ts
src/types/: svn.ts
src/views/: CheckoutView.vue  ConfigPresetView.vue  LogView.vue  MainLayout.vue  MergeView.vue  PackageView.vue  RemoteBrowserView.vue  StatusView.vue  WorkflowBoardView.vue
(+8 files in other folders)
